Fix: "Skip to main content" block not showing

--- a/sass/css/_base.scss
+++ b/sass/css/_base.scss
@@ -4,6 +4,7 @@
   --accent-color-light-1: #cd9ef7;
   --accent-color-dark-1: #7239b3;
   --accent-color-dark-2: #452981;
+  --vala-gradient: linear-gradient(157deg, #9141ac, #813d9c);
 	--foreground-color: black;
 	--background-color: white;
 }
@@ -22,9 +23,14 @@ body {
 
 h1 {
   font-size: 3rem;
+  letter-spacing: -0.04rem;
   font-weight: $font-weight-bold;
   font-variation-settings: 'wght' $font-weight-bold;
 }
+
+// h2 {
+
+// }
 
 ul {
   list-style-type: none;
@@ -44,7 +50,24 @@ a:active {
 }
 
 #bypass-block {
-  @extend %screen-reader-only;
+  position: absolute;
+  top: 0;
+  left: auto;
+  display: block;
+  text-align: center;
+  font-size: 2rem;
+  // margin-top: 1rem;
+  z-index: -2;
+  background: var(--vala-gradient);
+  opacity: 0;
+  width: 100vw;
+  color: white;
+  padding: 1rem;
+}
+
+#bypass-block:focus {
+  opacity: 1;
+  z-index: 999;
 }
 
 @media (prefers-color-scheme: dark) {
